--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -2,33 +2,36 @@ name: deploy_frontend
 # Deploys when push is made from frontend folder
 
 on:
-    push:
-        branches: [ main ]
-        paths: 
-        - 'frontend/**'
+  push:
+    branches: [ main ]
+    paths: 
+      - 'frontend/**'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: azure/login@v2
-      with:
+      - uses: actions/checkout@v4
+
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Upload to blob storage
-      uses: azure/CLI@v1
-      with:
-        inlineScript: |
+      - name: Upload to blob storage
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
             az storage blob upload-batch --account-name azureresumeacg --auth-mode key -d '$web' -s frontend/
-    - name: Purge CDN endpoint
-      uses: azure/CLI@v1
-      with:
-        inlineScript: |
-           az cdn endpoint purge --content-paths  "/*" --profile-name "azureresume-bnguye65" --name "azureresume-bnguye65" --resource-group "azureresume-rg"
 
-  # Azure logout
-    - name: logout
-      run: |
-            az logout
-      if: always()
+      - name: Purge CDN endpoint
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            az cdn endpoint purge --content-paths "/*" --profile-name "azureresume-bnguye65" --name "azureresume-bnguye65" --resource-group "azureresume-rg"
+
+      # Azure logout
+      - name: logout
+        run: |
+          az logout
+        if: always()
