--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -19,14 +19,16 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Upload to blob storage
-        uses: azure/CLI@v2
+        uses: azure/CLI@v1
         with:
+          azcliversion: 2.57.0
           inlineScript: |
             az storage blob upload-batch --account-name azureresumeacg --auth-mode key -d '$web' -s frontend/
 
       - name: Purge CDN endpoint
-        uses: azure/CLI@v2
+        uses: azure/CLI@v1
         with:
+          azcliversion: 2.57.0
           inlineScript: |
             az cdn endpoint purge --content-paths "/*" --profile-name "azureresume-bnguye65" --name "azureresume-bnguye65" --resource-group "azureresume-rg"
 
