--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: windows-latest
     steps:
     - name: 'Checkout GitHub Action'
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: 'Login via Azure CLI'
       uses: azure/login@v2
@@ -25,7 +25,7 @@ jobs:
 
 
     - name: Setup DotNet ${{ env.DOTNET_VERSION }} Environment
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
@@ -33,13 +33,13 @@ jobs:
       shell: pwsh
       run: |
         pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/api'
-        dotnet build --configuration Release --output ./output
+        dotnet build --configuration Release  ./output
         popd
     - name: 'Run unit test'
       shell: pwsh
       run: |
        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/tests'
-       dotnet build --configuration Release --output ./output
+       dotnet build --configuration Release  ./output
        popd
 
     - name: 'Run Azure Functions Action'
