--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -33,13 +33,13 @@ jobs:
       shell: pwsh
       run: |
         pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/api'
-        dotnet build --configuration Release  ./output
+        dotnet build --configuration Release  --output ./output
         popd
     - name: 'Run unit test'
       shell: pwsh
       run: |
        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/tests'
-       dotnet build --configuration Release  ./output
+       dotnet build --configuration Release  --output ./output
        popd
 
     - name: 'Run Azure Functions Action'
