--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -39,8 +39,7 @@ jobs:
       shell: pwsh
       run: |
        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/tests'
-       dotnet build --configuration Release 
-       popd
+       dotnet test
 
     - name: 'Run Azure Functions Action'
       uses: Azure/functions-action@v1
