--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ main ]
     paths:
-        - 'backend/**'
+        - 'api/**'
 
 env:
   AZURE_FUNCTIONAPP_NAME: GetResumeCounter   # set this to your function app name on Azure
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'backend'       # set this to the path to your function app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'api'       # set this to the path to your function app project, defaults to the repository root
   DOTNET_VERSION: '3.1'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
 
 jobs:
@@ -45,5 +45,5 @@ jobs:
       id: fa
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-        package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+        package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
         publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
