--- a/.github/workflows/backend.main.yml
+++ b/.github/workflows/backend.main.yml
@@ -50,7 +50,7 @@ jobs:
          echo "::add-mask::$publishProfiles"
          echo "::set-output name=publishProfiles::$publishProfiles"
 
-    - name: 'Run Azure Functions Action
+    - name: 'Run Azure Functions Action'
       uses: Azure/functions-action@v1
       id: fa
       with:
