--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -22,7 +22,7 @@ jobs:
         uses: azure/CLI@v2
         with:
           inlineScript: |
-            az storage blob upload-batch --account-name azureresumestoragebnguye --auth-mode key -d '$web' -s frontend/
+            az storage blob upload-batch --account-name azureresumestoragebnguye --auth-mode key -d '$web' -s frontend/ --overwrite
 
       - name: Purge CDN endpoint
         uses: azure/CLI@v2
